# CardioLogAI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.idx/: dev.nix
CardioLogAI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: main.py
app/Scripts/: general_helpers.py  medical_history_helpers.py  reset_db.py
app/core/: auth.py  config.py  const.py  logger.py  security.py
app/models/: __init__.py  medical_history.py  medication.py  patient.py  user.py
app/routes/: auth.py  medical_history.py  model.py  patient.py  user.py
app/schemas/: auth.py  medical_history.py  medication.py  patient.py  user.py
app/services/: auth.py  dependencies.py  medical_history.py  patient.py  user.py
app/services/model/: heart_disease_pipeline_v1.pkl  model.py  predict.py  preprocessor.joblib
app/services/test/: test_medical_history.py  test_patient.py  test_user.py  test_user_exceptions.py  user.py
tests/: conftest.py
tests/integration/: test_endpoints.py  test_patients.py  test_users.py
tests/unit/: db_connection.py  test_auth.py  test_medical_history_helpers.py  test_medical_history_schemas.py  test_medical_history_service.py  test_patient_service.py  test_user_service.py
