[project]
name = "CardioLogAI"
version = "0.1.0"
description = "A information system based on machine learning to help in the early diagnosis of cardivascular disease"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.0",
    "bcrypt>=4.0.0",
    "python-jose>=3.5.0",
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.24",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.1.1",
    "joblib>=1.5.3",
    "pandas>=3.0.1",
    "scikit-learn==1.6.1",
    "tpot==0.12.2",
    "setuptools==81.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "faker>=40.1.2",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

